--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  bloc: ^8.1.4
+  bloc_test: ^9.1.7
   cupertino_icons: ^1.0.8
+  equatable: ^2.0.7
+  flutter_bloc: ^8.1.6
+  flutter_lints: ^4.0.0
+  intl: ^0.19.0
+  dartz: ^0.10.1
+  google_sign_in: ^6.2.2
+  http: ^1.3.0
+  shared_preferences: ^2.5.2
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
