--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_font_icons: ^2.2.7
   flutter_svg: ^2.0.17
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
