--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_font_icons: ^2.2.7
   flutter_svg: ^2.0.17
   smooth_page_indicator: ^1.2.1
+  page_transition: ^2.2.1
+  buttons_tabbar: ^1.3.15
 
 dev_dependencies:
   flutter_test:
