--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   page_transition: ^2.2.1
   buttons_tabbar: ^1.3.15
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
